@startuml
title Protocolo de Mensajes

class Protocol {
  - skt: Socket&
  + send_uint8(v: uint8_t)
  + send_uint16(v: uint16_t)
  + send_uint32(v: uint32_t)
  + send_str(s: string)
  + send_bool(v: bool)
  + send_opcode(op: OpCode)
  + recv_uint8(): uint8_t
  + recv_uint16(): uint16_t
  + recv_uint32(): uint32_t
  + recv_str(): string
  + recv_bool(): bool
  + recv_opcode(): OpCode
}

class ServerProtocol {
  + send_event(ev: ServerEvent)
  + recv_command(): ClientCommand
  - send_login_ok(...)
  - send_entity_spawn(...)
  - send_damage_dealt(...)
  - recv_login(...)
  - recv_move(...)
  - recv_attack(...)
}

class ClientProtocol {
  + send_command(cmd: ClientCommand)
  + recv_event(): ServerEvent
  - send_login(...)
  - send_move(...)
  - send_attack(...)
  - recv_login_ok(...)
  - recv_entity_spawn(...)
  - recv_damage_received(...)
}

class Socket {
  - skt: int
  + sendall(data, sz): int
  + recvall(data, sz): int
  + sendsome(data, sz): int
  + recvsome(data, sz): int
}

class ClientCommand <<variant>> {
  LoginCmd
  MoveCmd
  AttackCmd
  CastSpellCmd
  PickupItemCmd
  EquipItemCmd
  MeditateCmd
  CreateCharacterCmd
  SendChatMsgCmd
  ClanFoundCmd
  ... (41 variantes)
}

class ServerEvent <<variant>> {
  LoginOkEvent
  EntitySpawnEvent
  EntityMoveEvent
  EntityDiedEvent
  DamageDealtEvent
  DamageReceivedEvent
  PlayerStatsEvent
  InventoryUpdateEvent
  ClanUpdateEvent
  ItemDroppedEvent
  MapDataEvent
  ... (29 variantes)
}

Protocol o-- ServerProtocol : <<compone>>
Protocol o-- ClientProtocol : <<compone>>
Socket <-- Protocol : &skt (referencia)
ServerProtocol *-- Socket : <<dueño>>
ClientProtocol *-- Socket : <<dueño>>
ServerProtocol ..> ServerEvent: serializa
ServerProtocol ..> ClientCommand: deserializa
ClientProtocol ..> ClientCommand: serializa
ClientProtocol ..> ServerEvent: deserializa
note right of ClientCommand
  std::variant con 41 tipos
  Dispatch via std::visit + overloaded
end note
note right of ServerEvent
  std::variant con ~29 tipos
  Dispatch via std::visit + overloaded
end note
@enduml